# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingexts--head--0.7
#

2005-01-31 02:44:30 GMT	John Goerzen <jgoerzen@complete.org>	patch-22

    Summary:
      Checkpointing -- tests on ALs complete
    Revision:
      missingexts--head--0.7--patch-22


    modified files:
     ChangeLog Python/Objects.hs Python/Types.hs glue/glue.c
     glue/glue.h testsrc/Interpretertest.hs testsrc/Objectstest.hs


2005-01-30 15:48:10 GMT	John Goerzen <jgoerzen@complete.org>	patch-21

    Summary:
      Strings Working
    Revision:
      missingexts--head--0.7--patch-21


    modified files:
     ChangeLog Python/Objects.hs


2005-01-30 15:41:23 GMT	John Goerzen <jgoerzen@complete.org>	patch-20

    Summary:
      Checkpointing
    Revision:
      missingexts--head--0.7--patch-20


    new files:
     testsrc/Objectstest.hs

    modified files:
     ChangeLog Python/Objects.hs testsrc/Interpretertest.hs
     testsrc/Tests.hs


2005-01-30 15:32:57 GMT	John Goerzen <jgoerzen@complete.org>	patch-19

    Summary:
      Checkpointing
    Revision:
      missingexts--head--0.7--patch-19


    removed files:
     libsrc/.arch-ids/=id

    modified files:
     ChangeLog MissingPy.cabal Python/Objects.hs Python/Types.hs
     Python/Utils.hs

    renamed files:
     Python/Instances.hs
       ==> Python/Objects.hs

    removed directories:
     libsrc libsrc/.arch-ids


2005-01-30 05:43:47 GMT	John Goerzen <jgoerzen@complete.org>	patch-18

    Summary:
      Initial tests WORK
    Revision:
      missingexts--head--0.7--patch-18


    modified files:
     ChangeLog Python/Interpreter.hsc Python/Utils.hs
     testsrc/Interpretertest.hs


2005-01-30 05:38:12 GMT	John Goerzen <jgoerzen@complete.org>	patch-17

    Summary:
      Fixed running from string
    Revision:
      missingexts--head--0.7--patch-17


    modified files:
     ChangeLog Python/Interpreter.hsc Python/Utils.hs
     testsrc/Interpretertest.hs
